# s3fc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: two_lines_and_sphere.mat  two_lines_and_sphere_drone_100.mat
examples/: demo.py  demo_drone.py
src/s3fc/: __init__.py  adjacency.py  affinity.py  coefficients.py  core.py  data_loader.py  embedding.py  metrics.py  toy_generator.py  utils.py
tests/: test_smoke.py
