[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s3fc"
version = "0.1.0"
description = "Scalable Sparse Spectral Fusion Clustering for Multi-Manifold Data"
requires-python = "==3.10.*"
dependencies = [
    "numpy==2.2.6",
    "scipy==1.15.3",
    "scikit-learn==1.7.2",
    "cvxpy==1.7.5",
    "joblib==1.5.3",
    "tqdm==4.67.3",
]

[tool.setuptools.packages.find]
where = ["src"]
